<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">eBay yShop</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_category">Category</string>
    <string name="birthday">Birthday</string>
    <string name="main_header">Whats the Occasion?</string>
    <string name="relocation">Relocation</string>
    <string name="holiday">Holiday</string>
    <string name="special">Special</string>
    <string name="bcoz">Just B\'coz</string>
    <string name="latest">Latest</string>
    <string name="trip">Trip</string>
    <string name="cloth">Cloth</string>
    <string name="shoes">Shoes</string>
    <string name="home">Home</string>
    <string name="collect">Collection</string>
    <string name="crafts">Crafts</string>
    <string name="sport">Sport</string>
    <string name="delete">Delete</string>
    
    <string name="item_image">Item Image</string>
    <string name="title_activity_listing">eBay Item</string>

</resources>
