<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ebay.skunk.ebayyshop.MainActivity" >
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/main_header"/>
    <LinearLayout
        android:baselineAligned="false"
        android:layout_weight="1"
		android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal" 
        android:layout_marginLeft="5dp">
		<LinearLayout
		    android:id="@+id/occasion_birthday"
			android:layout_weight="1"
			android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
		    <ImageView
		        android:layout_width="60dp"
		        android:layout_height="60dp"
		        android:contentDescription="@string/birthday"
		        android:src="@drawable/icon_birthday" />
		    <TextView
		        android:layout_width="60dp"
		        android:layout_height="20dp"
		        android:layout_marginTop="5dp"
		        android:gravity="center_horizontal"
		        android:textSize="12sp" 
		        android:text="@string/birthday"/>
		</LinearLayout>
		<LinearLayout
		  	android:id="@+id/occasion_relocation"
			android:layout_weight="1"
			android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
		    <ImageView
		        android:layout_width="60dp"
		        android:layout_height="60dp"
		        android:layout_marginRight="5dp"
		        android:contentDescription="@string/relocation"
		        android:src="@drawable/icon_relocation" />
		    <TextView
		        android:layout_width="60dp"
		        android:layout_height="20dp"
		        android:layout_marginTop="5dp"
		        android:gravity="center_horizontal"
		        android:textSize="12sp" 
		        android:text="@string/relocation"/>
		</LinearLayout>
		<LinearLayout
		   	android:id="@+id/occasion_holiday"
			android:layout_weight="1"
			android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
		    <ImageView
		        android:layout_width="60dp"
		        android:layout_height="60dp"
		        android:layout_marginRight="5dp"
		        android:contentDescription="@string/holiday"
		        android:src="@drawable/icon_holiday" />
		    <TextView
		        android:layout_width="60dp"
		        android:layout_height="20dp"
		        android:layout_marginTop="5dp"
		        android:gravity="center_horizontal" 
		        android:textSize="12sp"
		        android:text="@string/holiday"/>
		</LinearLayout>
	</LinearLayout>
    <LinearLayout
        android:baselineAligned="false"
		android:layout_weight="1"
		android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal" 
        android:layout_marginLeft="5dp">
		<LinearLayout
		   	android:id="@+id/occasion_special"
			android:layout_weight="1"
			android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
		    <ImageView
		        android:layout_width="60dp"
		        android:layout_height="60dp"
		        android:layout_marginRight="5dp"
		        android:contentDescription="@string/special"
		        android:src="@drawable/icon_special" />
		    <TextView
		        android:layout_width="60dp"
		        android:layout_height="20dp"
		        android:layout_marginTop="5dp"
		        android:gravity="center_horizontal" 
		        android:textSize="12sp"
		        android:text="@string/special"/>
		</LinearLayout>
		<LinearLayout
		    android:id="@+id/occasion_bcoz"
			android:layout_weight="1"
			android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
		    <ImageView
		        android:layout_width="60dp"
		        android:layout_height="60dp"
		        android:layout_marginRight="5dp"
		        android:contentDescription="@string/bcoz"
		        android:src="@drawable/icon_bcoz" />
		    <TextView
		        android:layout_width="60dp"
		        android:layout_height="20dp"
		        android:layout_marginTop="5dp"
		        android:gravity="center_horizontal" 
		        android:textSize="12sp"
		        android:text="@string/bcoz"/>
		</LinearLayout>
		<LinearLayout
		    android:id="@+id/occasion_latest"
			android:layout_weight="1"
			android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
		    <ImageView
		        android:layout_width="60dp"
		        android:layout_height="60dp"
		        android:layout_marginRight="5dp"
		        android:contentDescription="@string/latest"
		        android:src="@drawable/icon_latest" />
		    <TextView
		        android:layout_width="60dp"
		        android:layout_height="20dp"
		        android:layout_marginTop="5dp"
		        android:gravity="center_horizontal" 
		        android:textSize="12sp"
		        android:text="@string/latest"/>
		</LinearLayout>
	</LinearLayout>
    <LinearLayout
        android:baselineAligned="false"
        android:layout_weight="1"
		android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal" 
        android:layout_marginLeft="5dp">
		<LinearLayout
		    android:id="@+id/occasion_trip"
			android:layout_weight="1"
			android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
		    <ImageView
		        android:layout_width="60dp"
		        android:layout_height="60dp"
		        android:layout_marginRight="5dp"
		        android:contentDescription="@string/trip"
		        android:src="@drawable/icon_trip" />
		    <TextView
		        android:layout_width="60dp"
		        android:layout_height="20dp"
		        android:layout_marginTop="5dp"
		        android:gravity="center_horizontal" 
		        android:textSize="12sp"
		        android:text="@string/trip"/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
