<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ebay.skunk.ebayyshop.CategoryActivity" >
    <TextView 
        android:id="@+id/category_occasion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp" />
    <LinearLayout
        android:baselineAligned="false"
        android:layout_weight="1"
		android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal" 
        android:layout_marginLeft="5dp">
		<LinearLayout
		    android:id="@+id/category_cloth"
			android:layout_weight="1"
			android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
		    <ImageView
		        android:layout_width="60dp"
		        android:layout_height="60dp"
		        android:contentDescription="@string/cloth"
		        android:src="@drawable/icon_cloth" />
		    <TextView
		        android:layout_width="60dp"
		        android:layout_height="20dp"
		        android:layout_marginTop="5dp"
		        android:gravity="center_horizontal" 
		        android:text="@string/cloth"/>
		</LinearLayout>
		<LinearLayout
		  	android:id="@+id/category_shoes"
			android:layout_weight="1"
			android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
		    <ImageView
		        android:layout_width="60dp"
		        android:layout_height="60dp"
		        android:layout_marginRight="5dp"
		        android:contentDescription="@string/shoes"
		        android:src="@drawable/icon_shoes" />
		    <TextView
		        android:layout_width="60dp"
		        android:layout_height="20dp"
		        android:layout_marginTop="5dp"
		        android:gravity="center_horizontal" 
		        android:text="@string/shoes"/>
		</LinearLayout>
		<LinearLayout
		   	android:id="@+id/category_home"
			android:layout_weight="1"
			android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
		    <ImageView
		        android:layout_width="60dp"
		        android:layout_height="60dp"
		        android:layout_marginRight="5dp"
		        android:contentDescription="@string/home"
		        android:src="@drawable/icon_home" />
		    <TextView
		        android:layout_width="60dp"
		        android:layout_height="20dp"
		        android:layout_marginTop="5dp"
		        android:gravity="center_horizontal" 
		        android:text="@string/home"/>
		</LinearLayout>
	</LinearLayout>
    <LinearLayout
        android:baselineAligned="false"
		android:layout_weight="1"
		android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal" 
        android:layout_marginLeft="5dp">
		<LinearLayout
		   	android:id="@+id/category_collect"
			android:layout_weight="1"
			android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
		    <ImageView
		        android:layout_width="60dp"
		        android:layout_height="60dp"
		        android:layout_marginRight="5dp"
		        android:contentDescription="@string/collect"
		        android:src="@drawable/icon_collect" />
		    <TextView
		        android:layout_width="60dp"
		        android:layout_height="20dp"
		        android:layout_marginTop="5dp"
		        android:gravity="center_horizontal" 
		        android:text="@string/collect"/>
		</LinearLayout>
		<LinearLayout
		    android:id="@+id/category_crafts"
			android:layout_weight="1"
			android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
		    <ImageView
		        android:layout_width="60dp"
		        android:layout_height="60dp"
		        android:layout_marginRight="5dp"
		        android:contentDescription="@string/crafts"
		        android:src="@drawable/icon_crafts" />
		    <TextView
		        android:layout_width="60dp"
		        android:layout_height="20dp"
		        android:layout_marginTop="5dp"
		        android:gravity="center_horizontal" 
		        android:text="@string/crafts"/>
		</LinearLayout>
		<LinearLayout
		    android:id="@+id/category_sport"
			android:layout_weight="1"
			android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
		    <ImageView
		        android:layout_width="60dp"
		        android:layout_height="60dp"
		        android:layout_marginRight="5dp"
		        android:contentDescription="@string/sport"
		        android:src="@drawable/icon_sport" />
		    <TextView
		        android:layout_width="60dp"
		        android:layout_height="20dp"
		        android:layout_marginTop="5dp"
		        android:gravity="center_horizontal" 
		        android:text="@string/sport"/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>

